--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--Website Tab Icon-->
-	<link rel="icon" href="/assets/img/batasan-logo.png">
+	<link rel="icon" href="assets/img/batasan-logo.png">
 	<!--CSS-->
 	<link rel="stylesheet" href="assets/css/home/style.css">
 	<!--Bootsrap CSS-->
@@ -238,56 +238,56 @@
                             </ol>
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img class="d-block w-100" src="/assets/img/home/soba1.jpg" alt="First slide">
+                                <img class="d-block w-100" src="assets/img/home/soba1.jpg" alt="First slide">
                               </div>
                               
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba2.jpg" alt="Second slide">
+                                <img class="d-block w-100" src="assets/img/home/soba2.jpg" alt="Second slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba3.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba3.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba4.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba4.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba5.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba5.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba6.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba6.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba7.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba7.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba8.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba8.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba9.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba9.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba10.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba10.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba11.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba11.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba12.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba12.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba13.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba13.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba14.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba14.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba15.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba15.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba16.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba16.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="/assets/img/home/soba17.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/home/soba17.jpg" alt="Third slide">
                               </div>
 
 
